--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -54,6 +54,9 @@
   line-height: 48px;
   color: #ffffff;
   box-sizing: border-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   margin: 0;
   padding: 0;
 }
@@ -104,6 +107,9 @@
   font-size: 18px;
   line-height: 22px;
   color: #ffffff;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   margin: 16px auto 0 0;
   padding: 0;
 }
